# vgpu-note

./: VMWare Esxi 7.emmx  VmWare vGPU方案.emmx  qemu-virgl vgpu方案.emmx  readme.md  virgl_gpu_3d.pptx
poc-debug/: Makefile  build.sh  exec_poc.py  poc.c  svga.c  svga.h  svga3d_reg.h
poc-debug/modify_for_vmware_svga_sdk/: Makefile  svga.c  svga.h  svga3d.c  svga3d_reg.h  test.c  types.h
poc-svga/: poc2.7z  vuln_shader.hlsl  vuln_shader.txt
poc-svga/dx_compiler_x64/: 1.asm  make.py
poc-svga/poc2/: Makefile  poc.c  svga.c  svga.h  svga3d_reg.h
poc-svga/test/: noscreen-cursor.elf  noscreen-cursor.img  noscreen-cursor.vmx  noscreen-cursor.vmxf  nvram  simple-shaders-src.elf  simple-shaders-src.img  simple-shaders.elf  simple-shaders.vmx  simple-shaders.vmxf
ppt/: The Great Escape of ESXi_  Breaking Out of a Sandboxed Virtual Machine.pptx
virglrenderer-master/crash_poc/: crash_eat_opt_white.c  crash_parse_immediate_data.c  crash_vrend_create_shader.c  crash_vrend_decode_clear_texture.c  crash_vrend_decode_set_shader_images.c  crash_vrend_renderer_get_meminfo.c  oom_vrend_renderer_resource_create.c  oom_vrend_renderer_resource_create_2.c  部分bug我自己在代码中修复了.txt
virglrenderer-master/fuzz-data/: crash-4194f2eb252794d0408b9109764ca8738cac9e4f  crash-48033c83a9f9d64d21eb40198500f15a5cb1eae3  crash-48700c79c85a03b99f1274164483cb9b3bdcfb45  crash-49fddf3b1eba7caf3b8d04f09e3f5b7aad49cbc8  crash-736b9c2cd8dcb70da08943c6066f2b28b8e4e010  crash-7c44cbf1081addb194a33cc8488f06a18d3d13ce  crash-8adfd2b12a5bd559fcb6496b43dca63c646d2567  crash-8f34c4665d76f43d669215c9288736e65c27af48  crash-9424d2e755369069ae9c5c4a8b7c8ff27b91b3d6  crash-a9813630465baa713a25f715253de5ca11b73dba  crash-ab4e78bf280180b74582e6142edfea4133d07888  crash-d7c8d68d7eeab00516febd338ea532166538d391  crash-db21d1aaf818abe56d98215940718b29d3730b51  crash-eed51cd695ae6a46d6dbda58a6daf37a41724b83  crash-f2b167e7a290f656b7102c75e878c1a2214fce0b  crash-f654e477a0dff3fab84e11a8db1bc9ff51ed59fc  oom-6d89b78dec90e295f48b6827c7ae7f3b0a837905  oom-7b972a118844178c615efe0f6b1a38989d1ef08d  oom-8232fa893301452005b914afc10dbc6cf97ff6da  oom-a9cb91cd7acb56401aba4ab1581035f4cb233ad8  oom-cd9abb9fe30a39cd404a843481189765e451abce  oom-d06ed845af28b5670e61515be17484c18b5d0c6b  oom-d9e3631943f2dd119f1622b7e8e892a16d112bf5  oom-db696a9fd9390ba42d447090b379cfb04b015a05
virglrenderer-master/src/: crash-vrend_create_shader-oobw  meson.build  virgl_fuzzer.c  virgl_fuzzer_shader.c  virgl_fuzzer_shader_dict.txt  virgl_resource.c  vrend_decode.c  vrend_renderer.c
virglrenderer-master/src/gallium/auxiliary/tgsi/: tgsi_text.c
